--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "build:docs": "tsc && vite build && xcopy /E /I dist docs",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:e2e": "playwright test"
