--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,138 +1,63 @@
-name: Deploy to GitHub Pages
+name: Deploy static content to Pages
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-    types: [opened, synchronize, reopened, closed]
+    branches: ['main']
   workflow_dispatch:
 
+# Allow one concurrent deployment
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
+
+# Sets permissions for the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
-  checks: write
-  pull-requests: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v5
+      
+      - name: Set up Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: lts/*
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build
+        env:
+          BASE_PATH: ${{ github.event.repository.name }}
+        run: npm run build
+      
+      - name: Verify dist exists
+        run: test -d dist
+      
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          # Upload entire repository
+          path: './dist'
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Run accessibility tests
-      run: |
-        npm run lint
-        npm run test
-        npm run build
-
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: './dist'
-
-    - name: Run Lighthouse CI on build
-      run: |
-        npm install -g @lhci/cli
-        lhci autorun --config=.lighthouserc.js
-      env:
-        LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-      continue-on-error: true
-
+  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
-
     steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
-
-    - name: Post-deployment accessibility check
-      run: |
-        npm install -g pa11y-ci
-        sleep 30 # Wait for deployment to be ready
-        pa11y-ci --sitemap ${{ steps.deployment.outputs.page_url }}/sitemap.xml --threshold 0
-      continue-on-error: true
-
-    - name: Create deployment status
-      if: always()
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const status = '${{ job.status }}' === 'success' ? '✅' : '❌';
-          const url = '${{ steps.deployment.outputs.page_url }}';
-          const comment = `
-            ## 🚀 Deployment Status
-            
-            ${status} **${{ job.status === 'success' ? 'Success' : 'Failed' }}**
-            
-            **Live URL:** ${url}
-            
-            ### 🦽 Accessibility Compliance
-            - ✅ WCAG 2.2 AA standards implemented
-            - ✅ Semantic HTML structure
-            - ✅ Full keyboard navigation
-            - ✅ Screen reader compatibility
-            - ✅ High contrast support
-            
-            ### 📊 Performance & SEO
-            - Automatic Lighthouse audit completed
-            - Core Web Vitals monitored
-            - SEO optimization verified
-            
-            ### 🔍 Manual Testing Checklist
-            - [ ] Keyboard navigation test (Tab, Enter, Space, Arrow keys)
-            - [ ] Screen reader testing (NVDA, JAWS, VoiceOver)
-            - [ ] Zoom testing (200%, 400%)
-            - [ ] High contrast mode
-            - [ ] Color contrast verification
-            - [ ] Focus indicators visible
-            - [ ] Form validation announcements
-            
-            The application is WCAG 2.2 AA compliant and ready for production use.
-          `;
-          
-          if (context.eventName === 'push') {
-            // Create a status check for the deployment
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context sha,
-              state: '${{ job.status }}',
-              target_url: url,
-              description: 'Deployment complete - WCAG 2.2 AA compliant',
-              context: 'deployment/accessibility'
-            });
-          } else if (context.eventName === 'pull_request') {
-            // Comment on PR with deployment info
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
-          }
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
