--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "clsx": "^2.0.0",
+    "dexie": "^3.2.4",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "@hookform/resolvers": "^3.3.2",
     "react-hook-form": "^7.48.2",
-    "zod": "^3.22.4",
+    "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
-    "dexie": "^3.2.4",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -36,13 +38,13 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "jsdom": "^27.3.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.17.4",
-    "vitest": "^0.34.6",
-    "@playwright/test": "^1.40.0"
+    "vitest": "^0.34.6"
   }
 }
