--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@mlc-ai/web-llm": "^0.2.80",
     "clsx": "^2.0.0",
     "dexie": "^3.2.4",
     "lucide-react": "^0.294.0",
@@ -24,7 +25,7 @@
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
