ci: align Playwright baseURL with preview; run chromium-only in CI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         run: npx playwright install --with-deps chromium
       
       - name: Run E2E tests
-        run: npm run test:e2e
+        run: npm run test:e2e:ci
       
       - name: Upload test results
         if: always()
