--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:e2e": "playwright test",
-    "test:e2e:ci": "playwright test --project=chromium"
+    "test:e2e:smoke": "playwright test tests/e2e/smoke --project=chromium",
+    "test:e2e:ci": "npm run test:e2e:smoke"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
