chore(ci): align scheduled e2e-full workflow; fix e2e test stability

--- a/.github/workflows/e2e-full.yml
+++ b/.github/workflows/e2e-full.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run build
       
       - name: Install Playwright browsers
-        run: npx playwright install --with-deps chromium firefox webkit
+        run: npx playwright install --with-deps chromium
       
       - name: Run full E2E test suite
         run: npx playwright test
