--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mlc-ai/web-llm": "^0.2.80",
     "clsx": "^2.0.0",
     "dexie": "^3.2.4",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
