chore(ci): enforce no skipped/fixme tests in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
       
+      - name: Enforce no test skips/FIXMEs
+        run: node scripts/assert-no-playwright-skips.mjs
+      
       - name: Run E2E smoke tests
         run: npm run test:e2e:ci
       
